project(test)

find_package(GTest CONFIG REQUIRED)

set(TEST_NAME ${PROJECT_NAME})

add_subdirectory(app)

install(TARGETS
	${TEST_NAME}_app

	RUNTIME DESTINATION bin
)

if(WIN32)
	list(APPEND TARGET_DEPENDENCIES GTest::gtest_main)
	list(APPEND TARGET_DEPENDENCIES GTest::gtest)
	FIND_TARGET_LIBRARIES(TARGET_LIBRARIES TARGET_DEPENDENCIES)
	install(FILES
		${TARGET_LIBRARIES}

		DESTINATION bin
	)
endif()
