project(SQLiteRPC)

add_subdirectory(Lite)
add_subdirectory(LiteService)
add_subdirectory(LiteStudio)
add_subdirectory(LiteRPC/gRPC)

install(TARGETS
	Lite
	LiteService
	LiteStudio
	LiteRPC

	RUNTIME DESTINATION ${PROJECT_NAME}
)

set(INSTALL_TARGET_LIST
	Lite
	LiteService
	LiteStudio
	LiteRPC
)
if(WIN32)
	FIND_TARGET_DEPENDENCIES(TARGET_DEPENDENCIES ${INSTALL_TARGET_LIST})
	FIND_TARGET_LIBRARIES(TARGET_LIBRARIES TARGET_DEPENDENCIES)
	install(FILES
		${TARGET_LIBRARIES}

		DESTINATION ${PROJECT_NAME}
	)
elseif(UNIX)
	COPY_TARGET_DEPENDENCIES(INSTALL_TARGET_LIST)
	install(DIRECTORY
		"${CMAKE_INSTALL_PREFIX}/bin"
		DESTINATION .
	)
endif()
